--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,188 @@
 {{include './header.html'}}
-    <h1>这里是主页</h1>
+<link rel="stylesheet" href="/css/indexCss/indexLess.css">
+<div id="myCarousel" class="carousel slide" data-interval='3000' data-ride="carousel">
+    <!-- 轮播（Carousel）指标 -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+        <li data-target="#myCarousel" data-slide-to="4"></li>
+        <li data-target="#myCarousel" data-slide-to="5"></li>
+    </ol>
+    <!-- 轮播（Carousel）项目 -->
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="/imges/首页-推荐/banner-1.jpg" alt="First slide">
+        </div>
+        <div class="item">
+            <img src="/imges/首页-推荐/banner-2.jpg" alt="First slide">
+        </div>
+        <div class="item">
+            <img src="/imges/首页-推荐/banner-3.jpg" alt="First slide">
+        </div>
+        <div class="item">
+            <img src="/imges/首页-推荐/banner-4.jpg" alt="First slide">
+        </div>
+        <div class="item">
+            <img src="/imges/首页-推荐/banner-5.jpg" alt="First slide">
+        </div>
+        <div class="item">
+            <img src="/imges/首页-推荐/banner-6.jpg" alt="First slide">
+        </div>
+    </div>
+</div>
+<nav>
+    <img src="/imges/首页-推荐/pic1-1.png" alt="">
+    <img src="/imges/首页-推荐/pic1-2.png" alt="">
+    <img src="/imges/首页-推荐/pic1-3.png" alt="">
+    <img src="/imges/首页-推荐/pic1-4.png" alt="">
+    <img src="/imges/首页-推荐/pic1-5.png" alt="">
+    <img src="/imges/首页-推荐/pic1-6.png" alt="">
+    <img src="/imges/首页-推荐/pic1-7.png" alt="">
+</nav>
+<div class="only">
+    <h1>活动专区</h1>
+    <img src="/imges/首页-推荐/pic2-1.png" alt="">
+    <img src="/imges/首页-推荐/pic2-2.png" alt="">
+</div>
+<div class="flash" drag=true>
+    <img src="/imges/首页-推荐/pic3.jpg" alt="">
+    <div>
+        <div>
+            <h1>限时团购</h1>
+            <div>
+                <p>FLASH SALE</p>
+                <p><span>1</span>/17</p>
+            </div>
+        </div>
+        <section>
+            <div>
+                <div>
+                    <img src="/imges/首页-推荐/pic3-1.png" alt="">
+                    <div>
+                        <div>这里是倒计时</div>
+                        <h1>年度首发！银柳30枝起</h1>
+                        <p><del>原价￥79.00</del><span>￥39.00</span></p>
+                    </div>
+                </div>
+                <div>
+                    <img src="/imges/首页-推荐/pic3-1.png" alt="">
+                    <div>
+                        <div>这里是倒计时</div>
+                        <h1>年度首发！银柳30枝起</h1>
+                        <p><del>原价￥79.00</del><span>￥39.00</span></p>
+                    </div>
+                </div>
+                <div>
+                    <img src="/imges/首页-推荐/pic3-1.png" alt="">
+                    <div>
+                        <div>这里是倒计时</div>
+                        <h1>年度首发！银柳30枝起</h1>
+                        <p><del>原价￥79.00</del><span>￥39.00</span></p>
+                    </div>
+                </div>
 
+            </div>
+        </section>
+    </div>
+</div>
+<div class="new">
+    <div>
+        <div>
+            <h1>新品推荐</h1>
+            <div>
+                <p>NEW ARRIVAL</p>
+                <p><span>1</span>/8</p>
+            </div>
+        </div>
+        <section>
+            <div>
+                <div>
+                    <img src="/imges/首页-推荐/pic4-1.jpg" alt="">
+                    <h1>【11.11限时限量】高定版全家福</h1>
+                    <p>贵妇级顶配规格，从未有过的尖叫价格，先领券后下单</p>
+                    <div>¥599/12束</div>
+                </div>
+                <div>
+                    <img src="/imges/首页-推荐/pic4-1.jpg" alt="">
+                    <h1>【11.11限时限量】高定版全家福</h1>
+                    <p>贵妇级顶配规格，从未有过的尖叫价格，先领券后下单</p>
+                    <div>¥599/12束</div>
+                </div>
+                <div>
+                    <img src="/imges/首页-推荐/pic4-1.jpg" alt="">
+                    <h1>【11.11限时限量】高定版全家福</h1>
+                    <p>贵妇级顶配规格，从未有过的尖叫价格，先领券后下单</p>
+                    <div>¥599/12束</div>
+                </div>
+                <div>
+                    <img src="/imges/首页-推荐/pic4-1.jpg" alt="">
+                    <h1>【11.11限时限量】高定版全家福</h1>
+                    <p>贵妇级顶配规格，从未有过的尖叫价格，先领券后下单</p>
+                    <div>¥599/12束</div>
+                </div>
+
+            </div>
+        </section>
+    </div>
+</div>
+<div class="hot">
+    <div>
+        <h1>热卖专区</h1>
+        <div>
+            <p>ALL PRODUCTS</p>
+        </div>
+    </div>
+    <section>
+        <div>
+            <img src="/imges/首页-推荐/pic5-1.png" alt="">
+            <span>小耳朵醒花桶</span>
+            <p>新品首发，爱喝水的小耳朵醒花桶</p>
+            <div>¥29.9起</div>
+        </div>
+        <div>
+            <img src="/imges/首页-推荐/pic5-1.png" alt="">
+            <span>小耳朵醒花桶</span>
+            <p>新品首发，爱喝水的小耳朵醒花桶</p>
+            <div>¥29.9起</div>
+        </div>
+        <div>
+            <img src="/imges/首页-推荐/pic5-1.png" alt="">
+            <span>小耳朵醒花桶</span>
+            <p>新品首发，爱喝水的小耳朵醒花桶</p>
+            <div>¥29.9起</div>
+        </div>
+        <div>
+            <img src="/imges/首页-推荐/pic5-1.png" alt="">
+            <span>小耳朵醒花桶</span>
+            <p>新品首发，爱喝水的小耳朵醒花桶</p>
+            <div>¥29.9起</div>
+        </div>
+    </section>
+</div>
+<div class="inscribe">
+    <p>©2013-2020 上海分尚网络科技有限公司</p>
+    <div>沪ICP备13016979 <img src="/imges/首页-推荐/pic-footer.png" alt=""> 沪公网安备 31011402005615号</div>
+</div>
+
+<script>
+    $('.flash section').on({
+        touchend: function () {
+            let thisNum=$(this).scrollLeft()/$('.flash section>div>div').width()
+            $('.flash>div>div span').html(Math.round(thisNum)+1)
+            $(this)[0].scrollLeft=Math.round(thisNum)*$('.flash section>div>div').innerWidth()
+        }
+    })
+    $('.new section').on({
+        touchend: function () {
+            let thisNum=$(this).scrollLeft()/$('.new section>div>div').width()
+            $('.new>div>div span').html(Math.round(thisNum)+1)
+            console.log($('.new section>div>div').outerWidth(true));
+            $(this)[0].scrollLeft=Math.round(thisNum)*($('.new section>div>div').outerWidth(true))
+        }
+    })
+</script>
 </body>
 
 </html>
