--- a/www/css/monthlyCss/monthly.css
+++ b/www/css/monthlyCss/monthly.css
@@ -1,3 +1,11 @@
+header ul li {
+    border-bottom: 2px solid transparent;
+}
+
+header ul li:nth-of-type(2) {
+    border-bottom: 2px solid #333333;
+}
+
 .part {
     margin-bottom: 3vh;
 }
