--- a/views/gift.html
+++ b/views/gift.html
@@ -1,86 +1,150 @@
 {{include './header.html'}}
 <link rel="stylesheet" href="/css/giftCSS/gift.css">
-<div class="top-nav">
-    <section>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </section>
+<link rel="stylesheet" href="/swiper/swiper-bundle.min.css">
+<script src="/swiper/swiper-bundle.min.js"></script>
 
-    <div>
-        <div class="item active">
-            <img src="/imges/首页-礼品/banner-1.jpg" alt="">
+<div class="swiper-container top-pics">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">
+            <img src="/imges/首页-礼品/banner-1.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-礼品/banner-2.jpg" alt="">
+        <div class="swiper-slide">
+            <img src="/imges/首页-礼品/banner-2.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-礼品/banner-3.jpg" alt="">
+        <div class="swiper-slide">
+            <img src="/imges/首页-礼品/banner-3.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-礼品/banner-4.jpg" alt="">
+        <div class="swiper-slide">
+            <img src="/imges/首页-礼品/banner-4.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-礼品/banner-5.jpg" alt="">
+        <div class="swiper-slide">
+            <img src="/imges/首页-礼品/banner-5.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-礼品/banner-6.jpg" alt="">
+        <div class="swiper-slide">
+            <img src="/imges/首页-礼品/banner-6.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-礼品/banner-7.jpg" alt="">
-        </div>
-        <div class="item active">
-            <img src="/imges/首页-礼品/banner-1.jpg" alt="">
+        <div class="swiper-slide">
+            <img src="/imges/首页-礼品/banner-7.jpg">
         </div>
     </div>
+    <!-- 如果需要分页器 -->
+    <div class="swiper-pagination"></div>
 </div>
-
+<nav>
+    <div>
+        <ul>
+            <li><a href="">新品专区</a></li>
+            <li><a href="">鲜花2H达</a></li>
+            <li><a href="">鲜花预定</a></li>
+            <li><a href="">网红蛋糕</a></li>
+            <li><a href="">优选好礼</a></li>
+            <li><a href="">永生花</a></li>
+            <li><a href="">花礼周边</a></li>
+            <li><a href="">生日好礼</a></li>
+            <li><a href="">送爱人</a></li>
+            <li><a href="">送长辈领导</a></li>
+            <li><a href="">更多推荐</a></li>
+        </ul>
+    </div>
+    <div>
+        <img src="/imges/首页-礼品/down.png" alt="">
+    </div>
+    <section>
+        <div>
+            <section>
+                <img src="/imges/首页-礼品/up.png" alt="">
+            </section>
+            <div>新品专区</div>
+            <div>鲜花2H达</div>
+            <div>鲜花预定</div>
+            <div>网红蛋糕</div>
+            <div>优选好礼</div>
+            <div>永生花</div>
+            <div>花礼周边</div>
+            <div>生日好礼</div>
+            <div>送爱人</div>
+            <div>送长辈领导</div>
+            <div>更多推荐</div>
+        </div>
+    </section>
+</nav>
+<div class="gift-all"></div>
+<main></main>
+<div class="last-pic">
+    <img src="/imges/首页-礼品/footer.jpg" alt="">
+</div>
+<!-- 数据导入 -->
+<script src="/data/giftData.js"></script>
 <script>
-    $('.top-nav').on({
-        touchstart: function () {
-            // clearInterval(timerMove)
-            clearInterval(timer)
-        },
-        touchend: function () {
-            move()
-            
+    $(giftData.top).each(function (index, item) {
+        $('.gift-all').eq(0).append(`
+            <section>
+                <h1>${item.h}</h1>
+                <p>${item.title}</p>
+            </section>
+            <div>
+                <div>
+                    <img src="${item.img}" alt="">
+                    <span>${item.name}</span>
+                    <p>${item.txt}</p>
+                    <small>${item.more}</small>
+                    <div>
+                        <p>${item.price}</p>
+                        <div>立即购买<img src="/imges/首页-礼品/right.svg" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        `)
+    })
+    $.each(giftData,function (key, item) {
+        
+        if (key!='top') {
+            $('main').append(`
+            <div class="gift-all gift-${key} gift-childs">
+                <section>
+                    <h1>${item.h}</h1>
+                    <p>${item.txt}</p>
+                </section>
+                <div>
+                
+                </div>
+            </div>
+            `)
+            $(item.title).each(function(index,item_child){
+                
+                $(`.gift-${key}>div`).append(`
+                <div>
+                    <img src="${item_child.img}" alt="">
+                    <span>${item_child.name}</span>
+                    <p>${item_child.txt}</p>
+                    <div>
+                        <p>${item_child.price}<del>${item_child.oldPrice}</del></p>
+                        <div>立即购买<img src="/imges/首页-礼品/right.svg" alt=""></div>
+                    </div>
+                </div>
+                `)
+            })
         }
     })
-    function move() {
-        let thisNum = Math.round($('.top-nav')[0].scrollLeft / $('.top-nav').width()) + 1
-        if (thisNum == 8) {
-            thisNum = 0
-        }
-        $('.top-nav li').each(function (index, item) {
-            $(item).css('background-color', 'white')
-        })
-        $(`.top-nav li:nth-of-type(${thisNum})`).css('background-color', 'transparent')
-        if (thisNum <= 7) {
-            $('.top-nav')[0].scrollLeft = (thisNum - 1) * $('.top-nav').width()
-        } else {
-            $('.top-nav')[0].scrollLeft = 0
-            $(`.top-nav li:nth-of-type(1)`).css('background-color', 'transparent')
-        }
-    }
-    var timer = setInterval(function () {
-        let moveNum = 0
-        var timerMove = setInterval(() => {
-            moveNum++
-            $('.top-nav')[0].scrollLeft = $('.top-nav')[0].scrollLeft + 1
-            console.log($('.top-nav').width());
-            if (moveNum == $('.top-nav').width()) {
-                move()
-                clearInterval(timerMove)
-            }
-        }, 1);
+    $('nav>div').click(function(){
+        $('nav>section').css('display','block')
+        $('nav>div:nth-of-type(1)').html('切换分类')
+    })
+    $(window).click(function(){
+        console.log(this);
+    })
 
-    }, 5000)
+</script>
+
+<script>
+    var mySwiper = new Swiper('.top-pics', {
+        loop: true, // 循环模式选项
+        autoplay: true,
+        // 如果需要分页器
+        pagination: {
+            el: '.swiper-pagination',
+        },
+    })        
 </script>
 </body>
 
