--- a/views/header.html
+++ b/views/header.html
@@ -51,6 +51,10 @@
             text-decoration: none;
             letter-spacing: 2px;
         }
+        header a:focus{
+            color: black;
+            text-decoration: none;
+        }
 
         body {
             padding: 6vh 0 7.5vh 0;
@@ -64,6 +68,7 @@
             bottom: 0;
             display: flex;
             justify-content: space-around;
+            z-index: 99;
         }
 
         footer a {
@@ -71,7 +76,10 @@
             font-size: 12px;
             text-decoration: none;
         }
-
+        footer a:focus{
+            color: #888888;
+            text-decoration: none;
+        }
         footer div {
             padding-top: 6px;
         }
