--- a/views/index.html
+++ b/views/index.html
@@ -1,37 +1,34 @@
 {{include './header.html'}}
 <link rel="stylesheet" href="/css/indexCss/indexLess.css">
-<div id="myCarousel" class="carousel slide" data-interval='3000' data-ride="carousel">
-    <!-- 轮播（Carousel）指标 -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-        <li data-target="#myCarousel" data-slide-to="4"></li>
-        <li data-target="#myCarousel" data-slide-to="5"></li>
-    </ol>
-    <!-- 轮播（Carousel）项目 -->
-    <div class="carousel-inner">
-        <div class="item active">
-            <img src="/imges/首页-推荐/banner-1.jpg" alt="First slide">
+<link rel="stylesheet" href="/swiper/swiper-bundle.min.css">
+<script src="/swiper/swiper-bundle.min.js"></script>
+
+<div class="swiper-container top-pics">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">
+            <img src="/imges/首页-推荐/banner-1.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-推荐/banner-2.jpg" alt="First slide">
+        <div class="swiper-slide">
+            <img src="/imges/首页-推荐/banner-2.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-推荐/banner-3.jpg" alt="First slide">
+        <div class="swiper-slide">
+            <img src="/imges/首页-推荐/banner-3.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-推荐/banner-4.jpg" alt="First slide">
+        <div class="swiper-slide">
+            <img src="/imges/首页-推荐/banner-4.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-推荐/banner-5.jpg" alt="First slide">
+        <div class="swiper-slide">
+            <img src="/imges/首页-推荐/banner-5.jpg">
         </div>
-        <div class="item">
-            <img src="/imges/首页-推荐/banner-6.jpg" alt="First slide">
+        <div class="swiper-slide">
+            <img src="/imges/首页-推荐/banner-6.jpg">
         </div>
     </div>
+    <!-- 如果需要分页器 -->
+    <div class="swiper-pagination"></div>
 </div>
+
+
 <nav>
     <img src="/imges/首页-推荐/pic1-1.png" alt="">
     <img src="/imges/首页-推荐/pic1-2.png" alt="">
@@ -53,38 +50,14 @@
             <h1>限时团购</h1>
             <div>
                 <p>FLASH SALE</p>
-                <p><span>1</span>/17</p>
+                <p></p>
             </div>
         </div>
-        <section>
-            <div>
-                <div>
-                    <img src="/imges/首页-推荐/pic3-1.png" alt="">
-                    <div>
-                        <div>这里是倒计时</div>
-                        <h1>年度首发！银柳30枝起</h1>
-                        <p><del>原价￥79.00</del><span>￥39.00</span></p>
-                    </div>
-                </div>
-                <div>
-                    <img src="/imges/首页-推荐/pic3-1.png" alt="">
-                    <div>
-                        <div>这里是倒计时</div>
-                        <h1>年度首发！银柳30枝起</h1>
-                        <p><del>原价￥79.00</del><span>￥39.00</span></p>
-                    </div>
-                </div>
-                <div>
-                    <img src="/imges/首页-推荐/pic3-1.png" alt="">
-                    <div>
-                        <div>这里是倒计时</div>
-                        <h1>年度首发！银柳30枝起</h1>
-                        <p><del>原价￥79.00</del><span>￥39.00</span></p>
-                    </div>
-                </div>
-
-            </div>
-        </section>
+        <div class="swiper-container main-pics">
+            <div class="swiper-wrapper"></div>
+            <!-- 如果需要分页器 -->
+            <div class="swiper-pagination swiper-pagination-fraction"></div>
+        </div>
     </div>
 </div>
 <div class="new">
@@ -97,37 +70,11 @@
             </div>
         </div>
         <section>
-            <div>
-                <div>
-                    <img src="/imges/首页-推荐/pic4-1.jpg" alt="">
-                    <h1>【11.11限时限量】高定版全家福</h1>
-                    <p>贵妇级顶配规格，从未有过的尖叫价格，先领券后下单</p>
-                    <div>¥599/12束</div>
-                </div>
-                <div>
-                    <img src="/imges/首页-推荐/pic4-1.jpg" alt="">
-                    <h1>【11.11限时限量】高定版全家福</h1>
-                    <p>贵妇级顶配规格，从未有过的尖叫价格，先领券后下单</p>
-                    <div>¥599/12束</div>
-                </div>
-                <div>
-                    <img src="/imges/首页-推荐/pic4-1.jpg" alt="">
-                    <h1>【11.11限时限量】高定版全家福</h1>
-                    <p>贵妇级顶配规格，从未有过的尖叫价格，先领券后下单</p>
-                    <div>¥599/12束</div>
-                </div>
-                <div>
-                    <img src="/imges/首页-推荐/pic4-1.jpg" alt="">
-                    <h1>【11.11限时限量】高定版全家福</h1>
-                    <p>贵妇级顶配规格，从未有过的尖叫价格，先领券后下单</p>
-                    <div>¥599/12束</div>
-                </div>
-
-            </div>
+            <div></div>
         </section>
     </div>
 </div>
-<div class="hot">
+<div class="hot hot-one">
     <div>
         <h1>热卖专区</h1>
         <div>
@@ -135,36 +82,25 @@
         </div>
     </div>
     <section>
+        
+    </section>
+</div>
+<div class="find hot">
+    <div>
+        <h1>发现好物</h1>
         <div>
-            <img src="/imges/首页-推荐/pic5-1.png" alt="">
-            <span>小耳朵醒花桶</span>
-            <p>新品首发，爱喝水的小耳朵醒花桶</p>
-            <div>¥29.9起</div>
+            <p>GOOD THINGS</p>
         </div>
-        <div>
-            <img src="/imges/首页-推荐/pic5-1.png" alt="">
-            <span>小耳朵醒花桶</span>
-            <p>新品首发，爱喝水的小耳朵醒花桶</p>
-            <div>¥29.9起</div>
-        </div>
-        <div>
-            <img src="/imges/首页-推荐/pic5-1.png" alt="">
-            <span>小耳朵醒花桶</span>
-            <p>新品首发，爱喝水的小耳朵醒花桶</p>
-            <div>¥29.9起</div>
-        </div>
-        <div>
-            <img src="/imges/首页-推荐/pic5-1.png" alt="">
-            <span>小耳朵醒花桶</span>
-            <p>新品首发，爱喝水的小耳朵醒花桶</p>
-            <div>¥29.9起</div>
-        </div>
+    </div>
+    <section>
+        
     </section>
 </div>
 <div class="inscribe">
     <p>©2013-2020 上海分尚网络科技有限公司</p>
     <div>沪ICP备13016979 <img src="/imges/首页-推荐/pic-footer.png" alt=""> 沪公网安备 31011402005615号</div>
 </div>
+<script src="/data/indexData.js"></script>
 
 <script>
     $('.flash section').on({
@@ -182,7 +118,73 @@
             $(this)[0].scrollLeft=Math.round(thisNum)*($('.new section>div>div').outerWidth(true))
         }
     })
+    $(indexData.flash).each(function(index,item){
+        $('.main-pics .swiper-wrapper').append(`
+            <div class="swiper-slide">
+                <img src="${item.img}" alt="">
+                <div>
+                    <div>${item.time}</div>
+                    <h1>${item.title}</h1>
+                    <p><del>${item.oldPrice}</del><span>${item.newPrice}</span></p>
+                </div>
+            </div>
+        `)
+    })
+    $(indexData.new).each(function(index,item){
+        $('.new section>div').append(`
+            <div>
+                <img src="${item.img}" alt="">
+                <h1>${item.title}</h1>
+                <p>${item.txt}</p>
+                <div>${item.price}</div>
+            </div>
+        `)
+    })
+    $(indexData.hot).each(function(index,item){
+        $('.hot-one section').append(`
+            <div>
+                <img src="${item.img}" alt="">
+                <span>${item.title}</span>
+                <p>${item.txt}</p>
+                <div>${item.price}</div>
+            </div>
+        `)
+    })
+    $(indexData.find).each(function(index,item){
+        $('.find section').append(`
+            <div>
+                <img src="${item.img}" alt="">
+                <span>${item.title}</span>
+                <p>${item.txt}</p>
+                <div>${item.price}</div>
+            </div>
+        `)
+    })
 </script>
+<!-- 轮播配置 -->
+<script>        
+    var mySwiper = new Swiper ('.top-pics', {
+      loop: true, // 循环模式选项
+      autoplay:true,
+      // 如果需要分页器
+      pagination: {
+        el: '.swiper-pagination',
+      },
+    })        
+    
+    var swiper = new Swiper('.main-pics', {
+      pagination: {
+        el: '.swiper-pagination',
+        type: 'fraction',
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+
+    });
+  
+    </script>
 </body>
 
 </html>
